header overflow in the mobile version fixed

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
   scroll-behavior: smooth;
   }
 
+
 body {
   height: 100%;
   width: 100%;
@@ -19,6 +20,7 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: #141C3A;
+    
   }
  
 .heading{
@@ -26,11 +28,13 @@ body {
     font-family: "Poppins", sans-serif;
     font-size: 2.18em;
     padding-top:  1em ;
+    overflow: hidden;
   }
 
 
 #navbar {
     background-color :#21918D;
+    
   }
 
 #navbar ul {
